--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
   </section>
 
   <section id="about">
-    <div class="container even-columns py-xl intems-center">
+    <div class="container even-columns py-xl items-center">
       <div>
         <header>
           <strong>Coneça o app</strong>
@@ -109,64 +109,7 @@
     </div>
   </section>
 
-  <section id="pricing">
-    <div class="container py-xl">
-      <header>
-        <strong>Planos e preços</strong>
-        <h2>Assine e tenha acesso ilimitado a todas as funcionalidades</h2>
-      </header>
-
-      <div class="cards even-columns items-center">
-        <div class="card py-lg px-lg">
-          <h3>Básico</h3>
-          <p>Baixe o app e comece a cantar agora mesmo!</p>
-          <zin-pricing>Grátis</zin-pricing>
-          <a
-            href="#download"
-            class="btn btn-md"
-            aria-label="Baixar agora"
-          ></a>
-          <div class="separator"></div>
-          <ul role="list" class="grid gap-1">
-            <li>Com anúncios</li>
-            <li>Até 5 músicas por dia</li>
-            <li>Cante apenas as músicas disponíveis no plano gratuito</li>
-          </ul>
-        </div>
-
-        <div class="premium">
-          <div class="card py-lg px-lg">
-            <span>1 mês grátis</span>
-            <h3>Premium</h3>
-            <p>Ideal para quem já cansou de passar vergonha no Karaokê</p>
-            <zin-pricing>R$ 24,90 <small>/mês</small></zin-pricing>
-            <a href="#" class="btn btn-md">Experimente de graça</a>
-            <div class="separator"></div>
-            <ul role="list" class="grid gap-1">
-              <li>Sem interrupção de anúncios</li>
-              <li>Cante quantas músicas quiser</li>
-              <li>Cante todas as músicas da biblioteca</li>
-            </ul>
-          </div>
-        </div>
-
-        <div class="card py-lg px-lg">
-          <h3>Família</h3>
-          <p>Para aquelas famílias que adoram se reunir pra cantar</p>
-          <zin-pricing>R$ 21,90 <small>/mês por pessoa</small></zin-pricing>
-          <a href="#" class="btn btn-md" aria-label="Assinar agora"></a>
-          <div class="separator"></div>
-          <ul role="list" class="grid gap-1">
-            <li>Sem interrupção de anúncios</li>
-            <li>Cante quantas músicas quiser</li>
-            <li>Cante todas as músicas da biblioteca</li>
-          </ul>
-
-          <small>Mínimo de 4 pessoas no plano família.</small>
-        </div>
-      </div>
-    </div>
-  </section><section id="pricing">
+<section id="pricing">
     <div class="container py-xl">
       <header>
         <strong>Planos e preços</strong>
@@ -218,6 +161,31 @@
 
           <small>Mínimo de 4 pessoas no plano família.</small>
         </div>
+      </div>
+    </div>
+  </section>
+
+  <section id="dowload">
+    <div class="container py-xl">
+      <div class="card px-lg even-columns items-center">
+        <div>
+          <header>
+            <strong>Download</strong>
+            <h2>Bora cantar?</h2>
+          </header>
+          <p>Desperte seu potencial de estrela, liberte sua voz e faça parte da comunidade musical mais envolvente. Baixe o Zingen agora e transforme suas performances em experiências inesquecíveis!</p>
+
+          <div class="buttons flex gap-1">
+           <a href="#">
+            <img src="assets/button-appstore.svg" alt="Baixar na App Store">
+           </a>
+           <a href="#">
+            <img src="assets/button-playstore.svg" alt="Biaxar na Play Store">
+           </a>   
+          </div>
+        </div>
+
+        <img src="assets/rapaz-ouvindo-musica-com-fones-de-ouvido-e-cantando-no-aplicativo-de-karaoke-removebg 1.png" alt="">
       </div>
     </div>
   </section>
