--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <a href="#about" class="desktop-only">Conheça o app</a>
         <a href="#features" class="desktop-only">Funcionalidades</a><a href="#pricing" class="desktop-only">Planos e preços</a>
 
-        <a href="dowload" class="btn btn-sm">Baixar Agora</a>
+        <a href="#download" class="btn btn-sm">Baixar Agora</a>
       </nav>
     </div>
   </header>
@@ -36,7 +36,7 @@
 
       <div class="buttons flex items-center gap-1">
         <a href="#pricing" aria-label="Ver planos" class="btn btn-md"></a>
-        <a href="#dowload" class="btn btn-md">Baixar agora</a>
+        <a href="#download" class="btn btn-md">Baixar agora</a>
       </div>
     </div>
   </section>
@@ -138,7 +138,7 @@
             <zin-pricing>R$ 24,90 <small>/mês</small></zin-pricing>
             <a href="#" class="btn btn-md">Experimente de graça</a>
             <div class="separator"></div>
-            <ul role="list" class="grid gap-1">  
+            <ul role="list" class="grid gap-1">
               <li>Sem interrupção de anúncios</li>
               <li>Cante quantas músicas quiser</li>
               <li>Cante todas as músicas da biblioteca</li>
@@ -165,7 +165,7 @@
     </div>
   </section>
 
-  <section id="dowload">
+  <section id="download">
     <div class="container py-xl">
       <div class="card px-lg even-columns items-center">
         <div>
@@ -197,7 +197,7 @@
         <img src="assets/logo.svg" alt="">
   
         <nav class="even-columns">
-          <ul role="list" class="grid-1.5">
+          <ul role="list" class=" grid gap-1.5">
             <li class="title">Produto</li>
             <li>
               <a href="#fetures">Funcionalidades</a>
@@ -240,7 +240,7 @@
           <a href="#" class="social" aria-label="twitter"></a>
           <a href="#" class="social" aria-label="discord"></a>
         </div>
-        <span class="copu">©2024 Zingen Technologies, Inc.</span>
+        <span class="copy">©2024 Zingen Technologies, Inc.</span>
       </section>
     </div>
   </footer>
